# red_teaming_probes

./: .gitignore  README.md  coding_samples_by_year.json  config.py  dataset_curation.py  dataset_prepare.py  dev_env.sh  download_finetune_dataset.py  extract_coding_samples.py  finetune_normal.py  finetune_red_team.py  label_deception_anthrop_nvidia.py  probe_direction_generator.py  probe_exploration_2.py  probe_exploration_2_notebook.py  probe_exploration_notebook.py  probe_model.joblib  probe_test_nvidia_anthro.py  pyproject.toml  requirements.txt  test_prompt.py  trained_models.md
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  probe_dataset.baml  resume.baml
blue_team/: data_prepartion.py
