[project]
name = "red-teaming-probes"
version = "0.1.0"
description = "Red teaming probes project"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "trl<0.12",
    "datasets",
    "transformers",
    "peft",
    "wandb",
    "baml>=0.19.1",
    "baml-py>=0.220.0",
    "dotenv>=0.9.9",
    "fire>=0.7.1",
    "marimo>=0.21.1",
    "pyzmq>=27.1.0",
]


